[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.9.2,<0.10.0"]

[project]
name = "fort"
version = "2025.1"
description = "The Python database micropackage"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/fort"
"Issues" = "https://github.com/williamjacksn/fort/issues"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "uv-build>=0.9.2",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
